# kra-etims-frappe

./: .gitignore  LICENSE  README.md  pyproject.toml
kra_etims_frappe/: hooks.py  modules.txt  patches.txt
kra_etims_frappe/fixtures/: custom_field.json  etims_country.json  etims_import_item_status.json  etims_item_classification.json  etims_packaging_unit.json  etims_payment_type.json  etims_product_type.json  etims_purchase_receipt_type.json  etims_stock_movement_type.json  etims_taxation_type.json  etims_transaction_progress.json  etims_transaction_type.json  etims_unit_of_quantity.json  etims_url_path_function.json  workspace.json
kra_etims_frappe/kra_etims/: handlers.py  utils.py
kra_etims_frappe/kra_etims/apis/: apis.py  test_api_response.py
kra_etims_frappe/kra_etims/background_tasks/: tasks.py
kra_etims_frappe/kra_etims/doctype/etims_country/: etims_country.js  etims_country.json  test_etims_country.py
kra_etims_frappe/kra_etims/doctype/etims_environment_identifier/: test_etims_environment_identifier.py
kra_etims_frappe/kra_etims/doctype/etims_import_item_status/: test_etims_import_item_status.py
kra_etims_frappe/kra_etims/doctype/etims_notices/: etims_notices.js  etims_notices.json  etims_notices.py  etims_notices_list.js  (+1 more)
kra_etims_frappe/kra_etims/patch/: purchase_invoice.py
kra_etims_frappe/kra_etims_frappe/: utils.py
kra_etims_frappe/kra_etims_frappe/apis/: apis.py  remote_response_status_handlers.py
kra_etims_frappe/kra_etims_frappe/background_tasks/: tasks.py
kra_etims_frappe/kra_etims_frappe/doctype/: doctype_names_mapping.py
(+131 files in other folders)
